--- a/WebContent/warehouse/template/warehouse_in_manage.html
+++ b/WebContent/warehouse/template/warehouse_in_manage.html
@@ -1,3 +1,8 @@
-<div>
-	
+<div id="container">
+	<jxia-tabs>
+		<jxia-tab label="待入库采购订单" template="in/template_wait.mvc" onload="loadWait"></jxia-tab>
+        <jxia-tab label="入库单管理" template="in/template_list.mvc" onload="loadInManage"></jxia-tab>
+        <jxia-tab label="待入库供应商退货订单" template="in/template_wait_refund.mvc" onload="loadPurchaseRefund"></jxia-tab>
+        <jxia-tab label="样品待入库" template="in/template_wait_sample.mvc" onload="loadWaitSample"></jxia-tab>
+	</jxia-tabs>
 </div>
