收款界面的优化

--- a/WebContent/finance/template/finance_gathering.html
+++ b/WebContent/finance/template/finance_gathering.html
@@ -44,5 +44,5 @@
 			<jxiaui-datagrid-item label="当前状态" field="states"></jxiaui-datagrid-item>
      	</jxiaui-datagrid>
 	</div>
+	<finance-gathering-view :id="gatheringId" ref="view"></finance-gathering-view>
 </div>
-<div id="gathering-view-container"></div>
