--- a/WebContent/finance/template/finance_gathering.html
+++ b/WebContent/finance/template/finance_gathering.html
@@ -25,7 +25,7 @@
 	</div>
 	<div style="height: calc(100vh - 146px);">
 		<span class="fa fa-spinner fa-spin" v-if="loading"></span>
-		<jxiaui-datagrid class="table" ref="gatheringTable">
+		<jxiaui-datagrid class="table" ref="gatheringTable" :dataset="dataset">
          	<jxiaui-datagrid-item label="序号" type="index"></jxiaui-datagrid-item>
 			<jxiaui-datagrid-item label="合同编号">
 				<template v-slot="row">
