--- a/WebContent/finance/template/finance_gathering.html
+++ b/WebContent/finance/template/finance_gathering.html
@@ -16,7 +16,7 @@
 		终止日期
 		<jxiaui-datepicker v-model="form.edate"></jxiaui-datepicker>
 		<button @click="query">搜索</button>
-		<button id="exportBtn">导出</button>
+		<button @click="exportGathering">导出</button>
 	</div>
 	 
 	<div style="height:23px;">
