--- a/WebContent/warehouse/template/warehouse_out_manage.html
+++ b/WebContent/warehouse/template/warehouse_out_manage.html
@@ -1,8 +1,8 @@
 <div id="container">
 	<jxia-tabs>
-		<jxia-tab label="销售待出库列表" template="out/template_to_out.mvc" onload="loadWait"></jxia-tab>
-        <jxia-tab label="样品待出库列表" template="out/template_sample_to_out.mvc" onload="loadWaitSample"></jxia-tab>
-        <jxia-tab label="退货待出库列表" template="out/template_refund_to_out.mvc" onload="loadWaitRefund"></jxia-tab>
-        <jxia-tab label="已出库列表" template="out/template_outed.mvc" onload="loadOuted"></jxia-tab>
+		<jxia-tab label="销售待出库列表" template="warehouse/out/template_to_out.mvc" onload="loadWait"></jxia-tab>
+        <jxia-tab label="样品待出库列表" template="warehouse/out/template_sample_to_out.mvc" onload="loadWaitSample"></jxia-tab>
+        <jxia-tab label="退货待出库列表" template="warehouse/out/template_refund_to_out.mvc" onload="loadWaitRefund"></jxia-tab>
+        <jxia-tab label="已出库列表" template="warehouse/out/template_outed.mvc" onload="loadOuted"></jxia-tab>
 	</jxia-tabs>
 </div>
